--- a/sections/11_future_work.tex
+++ b/sections/11_future_work.tex
@@ -24,6 +24,6 @@ Given longitudinal sector assignment data for a collection of assets, reIndexer 
 
 In addition to being an excellent tool for comparing hypothetical sector universes, reIndexer may also be used to compare existing sector classification schemes. That is, it may hypothetically be used to compare the performance of the GICS classification scheme against the FTSE classification scheme.
 
-Similar to the analysis performed with the hypothetical sector universes, a \textit{divsersification ranking} of sorts of existing sector universes may be developed.
+Similar to the analysis performed with the hypothetical sector universes, a \textit{diversification ranking} of sorts of existing sector universes may be developed.
 
 \end{document}
