--- a/sections/01_introduction.tex
+++ b/sections/01_introduction.tex
@@ -16,6 +16,8 @@ The United States Government began classifying companies into segments and sub-g
 
 Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaction. This metric is integral to risk management, and relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the constituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
 
+\pagebreak
+
 Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of the the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets.\citeFormat{\cite{Markowitz1952PortfolioSelection}} This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
 
 \section{Status Quo} \label{introduction:status_quo}
@@ -30,7 +32,7 @@ In the United States today, there are myriad sectorization taxonomies (hereafter
     \fbox{
     \includegraphics[width=.9\linewidth]{images/msci_gics_breakdown.png}
     }
-    \caption{Overview of the GICS Sector Universe}
+    \caption{Overview of the GICS sector classification universe.}
     \label{fig:introduction:gics_breakdown}
 \end{wrapfigure}
 
@@ -55,6 +57,7 @@ The ICB (Industry Classification Benchmark)\citeFormat{\cite{FTSEInternationalLi
 
 Similar to the GICS, ICB too utilizes three main criteria when classifying companies into specific sectors, and other categories. They are; the primary source of revenue, description in annual filings, and - in the case of a new company - information derived from the company prospectus, or regulatory filing descriptions (company-supplied).
 
+\pagebreak
 
 \section{Key Limitations} \label{introduction:key_limitations}
 
@@ -64,7 +67,7 @@ Similar to the GICS, ICB too utilizes three main criteria when classifying compa
     \fbox{
     \includegraphics[width=.9\linewidth]{images/ftse_icb_breakdown.png}
     }
-    \caption{Overview of the MSCI Sector Universe}
+    \caption{Overview of the MSCI sector classification universe.}
     \label{fig:introduction:icb_breakdown}
 \end{wrapfigure}
 
